WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82561
Fix return type for virtual borderBoundingBox method
https://bugs.webkit.org/show_bug.cgi?id=82561
Summary
Fix return type for virtual borderBoundingBox method
Emil A Eklund
Reported
2012-03-28 18:43:33 PDT
The pure virtual definition of borderBoundingBox currently has it return a LayoutRect yet the actualv implementation returns an IntRect.
Attachments
Patch
(5.14 KB, patch)
2012-03-28 19:02 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2012-03-28 19:02:50 PDT
Created
attachment 134476
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-03-30 16:55:16 PDT
Comment on
attachment 134476
[details]
Patch OK.
WebKit Review Bot
Comment 3
2012-03-30 17:53:08 PDT
Comment on
attachment 134476
[details]
Patch Clearing flags on attachment: 134476 Committed
r112756
: <
http://trac.webkit.org/changeset/112756
>
WebKit Review Bot
Comment 4
2012-03-30 17:53:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug