Fix return type for virtual borderBoundingBox method https://bugs.webkit.org/show_bug.cgi?id=82561

Reviewed by Eric Seidel.

No new tests, no change in functionality.

* editing/DeleteButtonController.cpp:
(WebCore::isDeletableElement):
* rendering/RenderBox.h:
(WebCore::RenderBox::borderBoxRect):
Rename pixelSnappedBorderBoxRect to borderBoxRect and remove LayoutRect
version of same as we always want to use the pixel snapped version to
ensure proper rounding and alignment to device pixels.
(The way this rect is pixel snapped, using the m_frameRect location,
makes it hard for calling code to take the subpixel rect and correctly
snap it).

(WebCore::RenderBox::borderBoundingBox):
* rendering/RenderBoxModelObject.h:
Change pure virtual definition of borderBoundingBox to return an IntRect
to match implementation in RenderBox.

(RenderBoxModelObject):
* rendering/RenderInline.h:
(WebCore::RenderInline::borderBoundingBox):
Change overloaded method to IntRect to match RenderBox implementation.


Canonical link: https://commits.webkit.org/100132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112756 268f45cc-cd09-0410-ab3c-d52691b4dbfc